--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/IOOP Assignment/ETCDatabase.mdf
+/IOOP Assignment/ETCDatabase_log.ldf
