--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+/IOOP Assignment/ETCDatabase_log.ldf
+/IOOP Assignment/ETCDatabase.mdf
